metabake llc support page add

--- a/doc/metabake-llc/layout/nav-m.pug
+++ b/doc/metabake-llc/layout/nav-m.pug
@@ -29,4 +29,6 @@ header.flex.edge.header-amp
                li
                   a(href='/about/vic-cekvenich/') Victor Cekvenich
                li
+                  a(href='/about/support/') support
+               li
                   a(href='/about/contact/') contact us
