--- a/doc/metabake-llc/layout/nav.pug
+++ b/doc/metabake-llc/layout/nav.pug
@@ -32,6 +32,8 @@ header.delayShowing
                li
                   a(href='/about/vic-cekvenich/') Victor Cekvenich
                li
+                  a(href='/about/support/') support
+               li
                   a(href='/about/contact/') contact us
       .show-lg#navBarCont
          svg.feather(viewBox='0 0 24 24')
