--- a/doc/metabake-llc/assets/css/style.css
+++ b/doc/metabake-llc/assets/css/style.css
@@ -353,7 +353,7 @@ header { display: flex; align-items: center; justify-content: space-between; }
 .site-title { font-size: 12px; color: #7b7b7b; }
 @media (max-width: 960px) { ul.navJBar li.open-position > ul { position: static; } }
 h2, h3, h4, h5, h6 { font-weight: 600; }
-h2 { font-size: 26px; line-height: 1.5; margin: .8rem 0; }
+h2 { font-size: 26px; line-height: 1.2; margin: .8rem 0; }
 h3 { font-size: 22px; line-height: 1.3; margin: .5rem 0; }
 h4 { font-size: 20px; line-height: 1.2; margin: .4rem 0; }
 h5 { font-size: 18px; line-height: 1.1; margin: .3rem 0; }
@@ -397,6 +397,7 @@ textarea { resize: none; }
 button { cursor: pointer; }
 .grid-form { margin: 0 0 1.7rem 0; }
 .notification { color: green; font-size: 12px; margin: 1rem 0; }
+.support #sendBut { margin-bottom: 40px; }
 footer { background: #f2f2f2; color: #5a5a5a; padding-top: 40px; }
 footer ul { margin: 0 3rem 0 0; padding: 0; }
 footer ul:last-of-type { margin: 0; }
@@ -435,4 +436,4 @@ footer ul li a:hover { color: #5a5a5a; text-decoration: underline; }
 .slide-1 .img-top { background-image: url(../img/slide-1.jpg); }
 .slide-2 .img-top { background-image: url(../img/slide-4.jpg); }
 .slide-3 .img-top { background-image: url(../img/slide-3.jpg); }
-.markdown .highlight { background-color: #f0f0f0; color: #000; margin-bottom: 16px; border-radius: 6px; } /* mB v4.14.7 on 2018-12-26T16:58:16.043Z */
+.markdown .highlight { background-color: #f0f0f0; color: #000; margin-bottom: 16px; border-radius: 6px; } /* mB v4.14.7 on 2018-12-26T17:52:30.383Z */
