support and download email send and templates add,

--- a/website/assets/scss/_layout.scss
+++ b/website/assets/scss/_layout.scss
@@ -51,6 +51,14 @@ header, footer {
    }
 }
 
+.support {
+   .column {
+      h1 {
+         margin-top: 37px;
+      }
+   }
+}
+
 .columns {
    &.center {
       margin: 37px 0 0 0;
