--- a/website/about/support/form.pug
+++ b/website/about/support/form.pug
@@ -14,3 +14,66 @@
             textarea(name='msg', required)
 .notification.d-hide
 button#sendBut.btn-custom.btn-primary(type='submit') Send Message
+
+script.
+   depp.require(['pre'], setupEmail);
+
+   /**
+      return error message if validation fails or OK 
+   */
+   function val() { 
+      let nameInput = $('#name').val();
+      let emailInput = $('#email').val();
+      let msgTextarea = $('textarea[name="msg"]').val();
+      if (validator.isEmpty(nameInput, { ignore_whitespace: true }) ) {
+         return 'Name is blank';
+      }
+      if (validator.isEmpty(emailInput, { ignore_whitespace: true }) ) {
+         return 'Email is blank';
+      }
+      if (validator.isEmail(emailInput) === false) {
+         return 'Email is invalid';
+      }
+      if (validator.isEmpty(msgTextarea, { ignore_whitespace: true }) ) {
+         return 'Message is blank';
+      }
+      return 'OK';
+   }
+
+   function setupEmail() {
+      emailjs.init("user_Pc9qJia9LYfibI953zcJY"); // user_Ml0VMHTbgatOE8QpYmnmb
+      $('#mailFrm').disableAutoFill();
+
+      $('#sendBut').click(function() {
+         
+         $('.notification').removeClass('.error-msg').addClass('d-hide').text('');
+
+         let msg = val();
+         if(msg=='OK') {
+            console.log('send');
+            let dat = {
+               name: $("#name").val()
+               ,email: $("#email").val()
+               ,msg: $("textarea[name='msg']").val()
+            }
+            console.log(dat);
+            $(this).attr("disabled", "disabled");
+            emailjs
+               .send('gmail', 'support', dat )
+               .then(() => {
+                  $(this).removeAttr("disabled");
+                  $('.notification').removeClass('d-hide error-msg').text('The email has been sent');
+               });
+            $("#name, #email, textarea[name='msg']").val('');
+         }
+         else  {
+            swal({
+               type: 'error',
+               title: 'Oops...',
+               text: msg
+            });
+         }
+
+      });
+
+   }
