--- a/website/about/support/m.pug
+++ b/website/about/support/m.pug
@@ -4,5 +4,5 @@ block main
    .columns.support
       .column.col-6.col-xs-12
          include:metaMD text-1.md
-         include form
+         include form-m
          include:metaMD text-2.md
