--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -375,6 +375,7 @@ header, footer { padding-right: 2%; padding-left: 2%; }
 .content-wrapper ul, .content-wrapper ol { list-style-position: outside; margin-left: 0; padding-left: 40px; }
 .column img { display: block; width: 100%; }
 .column h1 { margin-top: 0; padding-top: 0; }
+.support .column h1 { margin-top: 37px; }
 .columns.center { margin: 37px 0 0 0; }
 .columns.center .column { padding-left: 1rem; padding-right: 1rem; }
 .modal:target, .modal.active { z-index: 9999; }
@@ -438,4 +439,4 @@ footer ul li a:hover { color: #5a5a5a; text-decoration: underline; }
 .slide-1 .img-top { background-image: url(../img/slide-1.jpg); }
 .slide-2 .img-top { background-image: url(../img/slide-4.jpg); }
 .slide-3 .img-top { background-image: url(../img/slide-3.jpg); }
-.markdown .highlight { background-color: #f0f0f0; color: #000; margin-bottom: 16px; border-radius: 6px; } /* mB v4.14.7 on 2018-12-27T05:55:06.476Z */
+.markdown .highlight { background-color: #f0f0f0; color: #000; margin-bottom: 16px; border-radius: 6px; } /* mB v4.14.7 on 2018-12-27T06:02:26.587Z */
