--- a/website/download/form.pug
+++ b/website/download/form.pug
@@ -14,4 +14,70 @@
             label Email address
             input#email(type='email', required)
 .notification.d-hide
-button#sendBut.btn-custom.btn-primary(type='submit') Download
+a#sendBut(href='#')
+   button.btn-custom.btn-primary(type='submit') Download
+
+script.
+   depp.require(['pre'], setupEmail);
+
+   /**
+      return error message if validation fails or OK 
+   */
+   function val() { 
+      let fNameInput = $('#f-name').val();
+      let lNameInput = $('#l-name').val();
+      let emailInput = $('#email').val();
+      if (validator.isEmpty(fNameInput, { ignore_whitespace: true }) ) {
+         return 'First Name is blank';
+      }
+      if (validator.isEmpty(lNameInput, { ignore_whitespace: true }) ) {
+         return 'Last Name is blank';
+      }
+      if (validator.isEmpty(emailInput, { ignore_whitespace: true }) ) {
+         return 'Email is blank';
+      }
+      if (validator.isEmail(emailInput) === false) {
+         return 'Email is invalid';
+      }
+      return 'OK';
+   }
+
+   function setupEmail() {
+      emailjs.init("user_Pc9qJia9LYfibI953zcJY"); // user_Ml0VMHTbgatOE8QpYmnmb
+      $('#mailFrm').disableAutoFill();
+
+      $('#sendBut').click(function(e) {
+
+         e.preventDefault();
+         $('.notification').removeClass('.error-msg').addClass('d-hide').text('');
+
+         let msg = val();
+         if(msg=='OK') {
+            console.log('send');
+            let dat = {
+               firstName: $("#f-name").val()
+               ,lastName: $("#l-name").val()
+               ,msg: $("#email").val()
+            }
+            console.log(dat);
+            $(this).attr("disabled", "disabled");
+            emailjs
+               .send('gmail', 'download', dat )
+               .then(() => {
+                  $(this).removeAttr("disabled");
+                  $('.notification').removeClass('d-hide error-msg').text('The email has been sent');
+               });
+            $("#f-name, #l-name, #email").val('');
+            $(this).attr({target: '_blank', href  : '/10-Pillars-Related-to-Low-Code_Final.pdf'});
+         }
+         else  {
+            swal({
+               type: 'error',
+               title: 'Oops...',
+               text: msg
+            });
+         }
+
+      });
+
+   }
