--- a/website/download/m.pug
+++ b/website/download/m.pug
@@ -2,6 +2,6 @@ extends /layout/layout-m
 
 block main
    .columns.support
-      .column.col-6.col-xs-12
+      .column.col-7.col-xs-12
          include:metaMD text-1.md
-         include form
+         include form-m
