--- a/website/download/form.pug
+++ b/website/download/form.pug
@@ -14,8 +14,7 @@
             label Email address
             input#email(type='email', required)
 .notification.d-hide
-a#sendBut(href='#')
-   button.btn-custom.btn-primary(type='submit') Download
+button#sendBut.btn-custom.btn-primary(type='submit') Download
 
 script.
    depp.require(['pre'], setupEmail);
