--- a/website/get-started/index.pug
+++ b/website/get-started/index.pug
@@ -1,5 +1,5 @@
 extends /layout/layout
 
 block main
-   include:metaMD text.md
-   .d-hide(data-js-menu-highlight="get-started")
+   .code(data-js-menu-highlight="get-started")
+      include:metaMD text.md
