--- a/website/assets/scss/_code.scss
+++ b/website/assets/scss/_code.scss
@@ -1,6 +1,18 @@
-.markdown .highlight {
-   background-color: #f0f0f0;
-   color: #000;
-   margin-bottom: 16px;
-   border-radius: 6px;
+.code {
+
+   pre {
+      font-family: monospace,monospace;
+      background-color: #f7f7f7;
+      border-radius: 2px;
+      color: #000;
+      font-size: 1em;
+      padding: 13px 15px;
+      margin-top: 0;
+      margin-bottom: 24px;
+      overflow-x: auto;
+   }
+
+   p {
+      margin-bottom: 16px;
+   }
 }
