--- a/website/download/form.pug
+++ b/website/download/form.pug
@@ -67,7 +67,11 @@ script.
                   $('.notification').removeClass('d-hide error-msg').text('The email has been sent');
                });
             $("#f-name, #l-name, #email").val('');
-            $(this).attr({target: '_blank', href  : '/10-Pillars-Related-to-Low-Code_Final.pdf'});
+            let a = document.createElement('a');
+            a.href = 'http://www.metabake.net/10-Pillars-Related-to-Low-Code_Final.pdf';
+            a.download = 'http://www.metabake.net/10-Pillars-Related-to-Low-Code_Final.pdf';
+            a.target='_blank';
+            a.click();
          }
          else  {
             swal({
