--- a/website/layout/layout-m.pug
+++ b/website/layout/layout-m.pug
@@ -49,7 +49,11 @@ html('⚡')
       block top
          .pageBack
             include /layout/nav-m
-            .img-top
+            .slider-wrap
+               .img-top
+                  .pad
+                     include:metaMD text-top.md
+            .img-top.inner
                .pad
                   include:metaMD text-top.md
 
