--- a/website/assets/scss/_slider.scss
+++ b/website/assets/scss/_slider.scss
@@ -1,3 +1,44 @@
+.slider-wrap {
+   display: none;
+}
+
+body {
+   &.home {
+      .slider-wrap {
+         display: block;
+      }
+      .img-top.inner {
+         display: none;
+      }
+   }
+   .img-top.inner {
+      background: url(../img/slide-3.jpg) top center / cover, no-repeat, #222;
+      height: 150px;
+      p:first-of-type {
+         display: none;
+      }
+      h2 {
+         text-align: left;
+         font-size: 26px;
+         line-height: 1.3;
+         width: 450px;
+         max-width: 100%;
+         padding: 0 0 0 15px;
+      }
+      .btn-custom {
+         margin: 16px 0 25px 0;
+         flex-shrink: 0;
+      }
+      .pad {
+         width: 100%;
+         padding: 0 2%;
+         display: flex;
+         align-items: center;
+         justify-content: space-between;
+      }
+   }
+}
+
 .slick-dots {
    text-align: center;
    padding: 0;
@@ -115,32 +156,6 @@
    }
 }
 
-.slider-wrap {
-   .pad {
-      width: 700px;
-      max-width: 100%;
-      display: table;
-      margin: 0 auto;
-      color: #222;
-      text-align: center;
-      h2 {
-         margin-bottom: 25px;
-         font-size: 46px;
-         font-weight: 600;
-         color: #222;
-         cursor: pointer;
-      }
-      .btn-custom {
-         margin: 35px auto 0 auto;
-         font-weight: 600;
-         color: white;
-      }
-      p {
-         margin: 0;
-      }
-   }
-}
-
 .img-top {
    background-position: center center;
    background-repeat: no-repeat;
@@ -151,6 +166,29 @@
    display: flex;
    align-items: center;
    justify-content: center;
+   .pad {
+      width: 700px;
+      max-width: 100%;
+      display: table;
+      margin: 0 auto;
+      color: #222;
+      text-align: center;
+   }
+   h2 {
+      margin-bottom: 25px;
+      font-size: 46px;
+      font-weight: 600;
+      color: #222;
+      cursor: pointer;
+   }
+   .btn-custom {
+      margin: 35px auto 0 auto;
+      font-weight: 600;
+      color: white;
+   }
+   p {
+      margin: 0;
+   }
 }
 
 .slide {
@@ -166,7 +204,6 @@
          background-image: url(../img/slide-4.jpg);
       }
    }
-
 
    &-3 {
       .img-top {
