--- a/website/assets/scss/_header.scss
+++ b/website/assets/scss/_header.scss
@@ -14,6 +14,25 @@
    margin-left: 25px;
    position: absolute;
    z-index: 999;
+   background: rgba(255,255,255,.97);
+   .navJBar {
+      padding: 10px 0;
+   }
+   li {
+      display: block;
+      &.open-position {
+         ul {
+            background: 0;
+            box-shadow: none;
+         }
+      }
+      a {
+         padding: 4px 20px;
+         &:before, &:after {
+            display: none;
+         }
+      }
+   }
 }
 
 .navJBar {
@@ -132,5 +151,9 @@ header {
 
       }
 
+   }
+
+   .site-title {
+      font-size: 10px;
    }
 }
