--- a/website/assets/scss/_layout.scss
+++ b/website/assets/scss/_layout.scss
@@ -9,11 +9,11 @@ header, footer {
    padding-right: 2%;
    padding-left: 2%;
 }
+
 .content-wrapper {
-   // sticky footer
    position: relative;
    padding: 2rem 5% 300px 5%;
-   min-height: calc(100vh - 542px);
+   min-height: calc(100vh - 242px);
 
    footer {
       position: absolute;
@@ -37,6 +37,12 @@ header, footer {
       list-style-position: outside;
       margin-left: 0;
       padding-left: 40px;
+   }
+}
+
+.home {
+   .content-wrapper {
+      min-height: calc(100vh - 542px);
    }
 }
 
@@ -66,5 +72,24 @@ header, footer {
          padding-left: 1rem;
          padding-right: 1rem;
       }
+   }
+}
+
+@media (max-width: 840px) {
+   .content-wrapper h1 {
+      font-size: 32px;
+   }
+}
+
+@media (max-width: 840px) {
+   .content-wrapper {
+      padding: 0 5% 240px 5%;
+   }
+}
+
+@media (max-width: 600px) {
+   .content-wrapper h1 {
+      font-size: 26px;
+      margin: 1rem 0 0 0;
    }
 }
