--- a/website/assets/scss/_slider.scss
+++ b/website/assets/scss/_slider.scss
@@ -215,10 +215,53 @@ body {
 }
 
 @media (max-width: 960px) {
+
    .img-top {
-      height: 400;
+      height: 400px;
       h2 {
          font-size: 32px;
       }
+   }
+
+}
+
+@media (max-width: 840px) {
+
+   .img-top h2 {
+      font-size: 20px;
+      padding: 0;
+      margin: 0 0 20px 0;
+   }
+
+   .home .img-top .pad {
+      padding-left: 2%;
+      padding-right: 2%;
+   }
+
+   body .img-top.inner .pad {
+      flex-wrap: wrap;
+      justify-content: center;
+      h2 {
+         text-align: center;
+      }
+   }
+
+   body .img-top.inner .btn-custom {
+      margin: 0;
+   }
+
+}
+
+@media (max-width: 600px) {
+
+   .home .img-top {
+      height: 300px;
+   }
+
+}
+
+@media (max-width: 480px) {
+   .home .img-top p:first-of-type {
+      display: none;
    }
 }
