--- a/website/assets/scss/_typography.scss
+++ b/website/assets/scss/_typography.scss
@@ -1,12 +1,3 @@
-// h1, .h1,
-// h2, .h2,
-// h3, .h3,
-// h4, .h4,
-// h5, .h5,
-// h6, .h6 {
-   
-// }
-
 h2,
 h3,
 h4,
@@ -102,10 +93,6 @@ p, ul li {
 
 @media (max-width: 960px) {
 
-   .content-wrapper h1 {
-      font-size: 32px;
-   }
-
    h2 {
       font-size: 20px;
    }
@@ -126,6 +113,35 @@ p, ul li {
    
    p {
       margin-bottom: .5rem;
+   }
+
+   .tag-line {
+      font-size: 18px;
+   }
+
+}
+
+@media (max-width: 840px) {
+
+   p, ul li {
+      font-size: 12px;
+   }
+
+}
+
+@media (max-width: 600px) {
+   
+   h2 {
+      font-size: 16px;
+   }
+
+   h2 {
+      font-size: 14px;
+   }
+
+   .tag-line {
+      padding: 1rem;
+      font-size: 14px;
    }
 
 }
