styles clean up

--- a/website/about/support/m.pug
+++ b/website/about/support/m.pug
@@ -2,7 +2,7 @@ extends /layout/layout-m
 
 block main
    .columns.support
-      .column.col-6.col-xs-12
+      .column.col-6.col-lg-10.col-xs-12
          include:metaMD text-1.md
          include form-m
          include:metaMD text-2.md
