--- a/website/assets/scss/_button.scss
+++ b/website/assets/scss/_button.scss
@@ -34,7 +34,7 @@
    }
 
    &-primary {
-      background: linear-gradient(to right, $color-primary-0 50%, $color-orange 50%) no-repeat scroll right bottom / 210% 100% $color-orange;
+      background: linear-gradient(to right, $color-primary 50%, $color-theme 50%) no-repeat scroll right bottom / 210% 100% $color-theme;
       &, &:hover, &:active, &:focus {
          &, svg {
             color: white;
@@ -72,7 +72,7 @@
    svg {
       width: 25px;
       height: 25px;
-      fill: #111;
+      fill: $color-primary;
       flex-shrink: 0;
    }
    a {
