--- a/website/assets/scss/_header.scss
+++ b/website/assets/scss/_header.scss
@@ -102,7 +102,7 @@
          }
          a {
             padding: 0 0 7px 0;
-            color: #222;
+            color: $color-bg-dark;
             white-space: nowrap;
             &:hover {
                &:before {
