--- a/website/assets/scss/_variables.sass
+++ b/website/assets/scss/_variables.sass
@@ -1,9 +1,7 @@
 // Palette URL: http://paletton.com/#uid=13+0u0k1-8C1pmh1pfA5b2gf93D */
 
-$color-primary-0: #2E2E30	// Main Primary color */
-$color-primary-1: #78787C
-$color-primary-2: #545457
-$color-primary-3: #0B0B0D
-$color-primary-4: #0C0C14
-
-$color-orange: #5d8858
+$color-primary: #2E2E30
+$color-theme: #5d8858 // green 
+$color-bg-light: #F4F4F3
+$color-bg-dark: #222
+$color-dark: #5a5a5a
