--- a/website/download/index.pug
+++ b/website/download/index.pug
@@ -2,6 +2,6 @@ extends /layout/layout
 
 block main
    .columns.support(data-js-menu-highlight="about")
-      .column.col-7.col-xs-12
+      .column.col-7.col-lg-10.col-xs-12
          include:metaMD text-1.md
          include form      
