--- a/website/about/contact/index.pug
+++ b/website/about/contact/index.pug
@@ -2,6 +2,6 @@ extends /layout/layout
 
 block main
    .columns(data-js-menu-highlight="contact")
-      .column.col-6.col-xs-12
+      .column.col-6.col-lg-10.col-xs-12
          include:metaMD contact.md
          include email
