--- a/website/about/contact/m.pug
+++ b/website/about/contact/m.pug
@@ -2,6 +2,6 @@ extends /layout/layout-m
 
 block main
    .columns
-      .column.col-6.col-xs-12
+      .column.col-6.col-lg-10.col-xs-12
          include:metaMD contact.md
          include email
