--- a/website/about/support/index.pug
+++ b/website/about/support/index.pug
@@ -2,7 +2,7 @@ extends /layout/layout
 
 block main
    .columns.support(data-js-menu-highlight="about")
-      .column.col-6.col-xs-12
+      .column.col-6.col-lg-10.col-xs-12
          include:metaMD text-1.md
          include form      
          include:metaMD text-2.md
