--- a/website/assets/scss/_layout.scss
+++ b/website/assets/scss/_layout.scss
@@ -30,7 +30,7 @@ header, footer {
       line-height: 56px;
       margin: 37px 0 25px;
       font-size: 37px;
-      color: #222;
+      color: $color-bg-dark;
       letter-spacing: -.01em;
    }
    ul, ol {
@@ -73,6 +73,19 @@ header, footer {
          padding-right: 1rem;
       }
    }
+}
+
+.modal:target, .modal.active {
+   z-index: 9999;
+}
+
+svg {
+   width: 30px;
+   height: 30px;
+}
+
+.d-hide {
+  display: none;
 }
 
 @media (max-width: 840px) {
