amp styles add, amp validation fix

--- a/website/about/contact/m.pug
+++ b/website/about/contact/m.pug
@@ -4,4 +4,4 @@ block main
    .columns
       .column.col-6.col-lg-10.col-xs-12
          include:metaMD contact.md
-         include email
+         include email-m
