--- a/website/about/vic-cekvenich/m.pug
+++ b/website/about/vic-cekvenich/m.pug
@@ -3,7 +3,7 @@ extends /layout/layout-m
 block main
    .columns.center
       .column.col-5.col-sm-12
-         img(src='who.jpg')
+         amp-img(src='who.jpg', width=494, height=330)
    
       .column.col-7.col-sm-12
          include:metaMD text.md 
