mobile styles fix

--- a/website/assets/scss/_slider.scss
+++ b/website/assets/scss/_slider.scss
@@ -264,4 +264,8 @@ body {
    .home .img-top p:first-of-type {
       display: none;
    }
+
+   body .img-top.inner .pad h2 {
+      font-size: 16px;
+   }
 }
