--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -14,7 +14,7 @@ html(lang='en_US')
       script(src='https://cdn.jsdelivr.net/npm/riot@3.13.2/riot.min.js')
       script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js')
 
-      script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js')
+      script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js')
       script(src='https://cdn.jsdelivr.net/npm/blueimp-load-image@2.19.0/js/load-image.all.min.js')
       script(src= ROOT + 'assets/js/setup.js')
 
