--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -6,7 +6,7 @@ html(lang='en_US')
          let _start = Date.now()
       meta(charset='utf-8')
       meta(name='viewport', content='width=device-width, initial-scale=1')
-      link(rel='shortcut icon', href= ROOT + 'assets/favicon.png', type='image/x-icon')
+      link(rel='shortcut icon', href= '/assets/favicon.png', type='image/x-icon')
 
       link(href='https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|Playfair+Display:400,400i,700,700i', rel='stylesheet')
 
@@ -16,7 +16,7 @@ html(lang='en_US')
 
       script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js')
       script(src='https://cdn.jsdelivr.net/npm/blueimp-load-image@2.19.0/js/load-image.all.min.js')
-      script(src= ROOT + 'assets/js/setup.js')
+      script(src= '/assets/js/setup.js')
 
       style.
          .delayShowing { opacity: 0; }
