--- a/meta-website/layout/layout-m.pug
+++ b/meta-website/layout/layout-m.pug
@@ -5,7 +5,7 @@ html('⚡')
       meta(name='viewport', content='width=device-width, initial-scale=1')
       script(async, src='https://cdn.ampproject.org/v0.js')
       link(rel='canonical', href='index.html')
-      link(rel='shortcut icon', href= ROOT + 'assets/favicon.png', type='image/x-icon')
+      link(rel='shortcut icon', href= '/assets/favicon.png', type='image/x-icon')
       link(href='https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|Playfair+Display:400,400i,700,700i', rel='stylesheet')
 
       title #{pageTitle}
