--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -1,25 +1,13 @@
 doctype html
 html(lang='en_US')
    head
+      //- this website has 4 interactive effects
       link(rel='amphtml', href='m.html')
       script.
          let _start = Date.now()
       meta(charset='utf-8')
-      meta(name='viewport', content='width=device-width, initial-scale=1')
       link(rel='shortcut icon', href= '/assets/favicon.png', type='image/x-icon')
-
-      link(href='https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|Playfair+Display:400,400i,700,700i', rel='stylesheet')
-
-      script(src='https://cdn.jsdelivr.net/npm/johnnydepp@0.0.3/dist/depp.min.js')
-      script(src='https://cdn.jsdelivr.net/npm/riot@3.13.2/riot.min.js')
-      script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js')
-
-      script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js')
-      script(src='https://cdn.jsdelivr.net/npm/blueimp-load-image@2.19.0/js/load-image.all.min.js')
-      script(src= '/assets/js/setup.js')
-
-      style.
-         .delayShowing { opacity: 0; }
+      meta(name='viewport', content='width=device-width, initial-scale=1')
 
       title #{pageTitle}
       meta(name='description', content=content_text)
@@ -46,9 +34,22 @@ html(lang='en_US')
 
       meta(name="google-site-verification", content="Zu5ZnMt3FILJtC7eu_MhsNzb5tHdGXAfReJspT3RwNg")
 
+      //- loading
+      script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js')
+      script(src='https://cdn.jsdelivr.net/npm/johnnydepp@0.0.3/dist/depp.min.js')
+
+      // get the images
+      script(src='https://cdn.jsdelivr.net/npm/blueimp-load-image@2.19.0/js/load-image.all.min.js')
+      script(src= '/assets/js/loader.js')
+
+      //- top css layout
+      link(href='/assets/css/spectreTop.css', rel='stylesheet', type='text/css') 
+      style.
+         .delayShowing { opacity: 0; }
+      // in case a page needs it:
       block head2
 
-   body(class=home)
+   body
 
       block top
          .pageBack
