--- a/meta-website/download/form.pug
+++ b/meta-website/download/form.pug
@@ -68,8 +68,8 @@ script.
                });
             $("#f-name, #l-name, #email").val('');
             let a = document.createElement('a');
-            a.href = 'http://www.metabake.net/10-Pillars-Related-to-Low-Code_Final.pdf';
-            a.download = 'http://www.metabake.net/10-Pillars-Related-to-Low-Code_Final.pdf';
+            a.href = 'http://www.MetaBake.org/10-Pillars-Related-to-Low-Code_Final.pdf';
+            a.download = 'http://www.MetaBake.org/10-Pillars-Related-to-Low-Code_Final.pdf';
             a.target='_blank';
             a.click();
          }
