--- a/meta-website/layout/layout-m.pug
+++ b/meta-website/layout/layout-m.pug
@@ -41,7 +41,7 @@ html('⚡')
          style(amp-boilerplate='').
             body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
 
-      include ../layout/css.pug
+      include ../layout/css
 
       block head2
 
