--- a/meta-website/layout/nav.pug
+++ b/meta-website/layout/nav.pug
@@ -36,7 +36,7 @@ header.delayShowing
                li
                   a(href='/about/contact/') contact us
       .show-lg#navBarCont
-         svg.feather(viewBox='0 0 24 24')
+         svg.featherSVG(viewBox='0 0 24 24')
             line(x1='3', y1='12', x2='21', y2='12')
             line(x1='3', y1='6',  x2='21', y2='6')
             line(x1='3', y1='18', x2='21', y2='18')
