--- a/meta-website/assets/css/spectre.css
+++ b/meta-website/assets/css/spectre.css
@@ -9,19 +9,10 @@ h6, .h6 { font-size: .8rem; }
 p { margin: 0 0 1.2rem; }
 a, ins, u { -webkit-text-decoration-skip: ink edges; text-decoration-skip: ink edges; }
 abbr[title] { border-bottom: 0.05rem dotted; cursor: help; text-decoration: none; }
-kbd { border-radius: 0.1rem; line-height: 1.2; padding: .1rem .2rem; background: #303742; color: #fff; font-size: 0.7rem; }
+kbd { border-radius: 0.1rem; line-height: 1.25; padding: .1rem .2rem; background: #303742; color: #fff; font-size: 0.7rem; }
 mark { background: #ffe9b3; color: #3b4351; border-bottom: 0.05rem solid #ffd367; border-radius: 0.1rem; padding: 0.05rem 0.1rem 0; }
 blockquote { border-left: 0.1rem solid #dadee4; margin-left: 0; padding: 0.4rem 0.8rem; }
 blockquote p:last-child { margin-bottom: 0; }
-ul, ol { margin: 0.8rem 0 0.8rem 0.8rem; padding: 0; }
-ul ul, ul ol, ol ul, ol ol { margin: 0.8rem 0 0.8rem 0.8rem; }
-ul li, ol li { margin-top: 0.4rem; }
-ul { list-style: disc inside; }
-ul ul { list-style-type: circle; }
-ol { list-style: decimal inside; }
-ol ol { list-style-type: lower-alpha; }
-dl dt { font-weight: bold; }
-dl dd { margin: 0.4rem 0 0.8rem 0; }
 .table { border-collapse: collapse; border-spacing: 0; width: 100%; text-align: left; }
 .table.table-striped tbody tr:nth-of-type(odd) { background: #f7f8f9; }
 .table tbody tr.active, .table.table-striped tbody tr.active { background: #eef0f3; }
@@ -68,14 +59,14 @@ dl dd { margin: 0.4rem 0 0.8rem 0; }
 .btn-group .btn:focus, .btn-group .btn:hover, .btn-group .btn:active, .btn-group .btn.active { z-index: 1; }
 .btn-group.btn-group-block { display: flex; }
 .btn-group.btn-group-block .btn { flex: 1 0 0; }
-.label { border-radius: 0.1rem; line-height: 1.2; padding: .1rem .2rem; background: #eef0f3; color: #455060; display: inline-block; }
+.label { border-radius: 0.1rem; line-height: 1.25; padding: .1rem .2rem; background: #eef0f3; color: #455060; display: inline-block; }
 .label.label-rounded { border-radius: 5rem; padding-left: .4rem; padding-right: .4rem; }
 .label.label-primary { background: #5755d9; color: #fff; }
 .label.label-secondary { background: #f1f1fc; color: #5755d9; }
 .label.label-success { background: #32b643; color: #fff; }
 .label.label-warning { background: #ffb700; color: #fff; }
 .label.label-error { background: #e85600; color: #fff; }
-code { border-radius: 0.1rem; line-height: 1.2; padding: .1rem .2rem; background: #fcf2f2; color: #d73e48; font-size: 85%; }
+code { border-radius: 0.1rem; line-height: 1.25; padding: .1rem .2rem; background: #fcf2f2; color: #d73e48; font-size: 85%; }
 .code { border-radius: 0.1rem; color: #3b4351; position: relative; }
 .code::before { color: #bcc3ce; content: attr(data-lang); font-size: 0.7rem; position: absolute; right: 0.4rem; top: 0.1rem; }
 .code code { background: #f7f8f9; color: inherit; display: block; line-height: 1.5; overflow-x: auto; padding: 1rem; width: 100%; }
@@ -241,7 +232,7 @@ a.text-error:visited { color: #ff6003; }
 .text-assistive { border: 0; clip: rect(0, 0, 0, 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
 .divider, .divider-vert { display: block; position: relative; }
 .divider[data-content]::after, .divider-vert[data-content]::after { background: #fff; color: #bcc3ce; content: attr(data-content); display: inline-block; font-size: 0.7rem; padding: 0 0.4rem; transform: translateY(-0.65rem); }
-.divider { border-top: 0.05rem solid #dadee4; height: 0.05rem; margin: 0.4rem 0; }
+.divider { border-top: 0.05rem solid #f1f3f5; height: 0.05rem; margin: 0.4rem 0; }
 .divider[data-content] { margin: 0.8rem 0; }
 .divider-vert { display: block; padding: 0.8rem; }
 .divider-vert::before { border-left: 0.05rem solid #dadee4; bottom: 0.4rem; content: ""; display: block; left: 50%; position: absolute; top: 0.4rem; transform: translateX(-50%); }
@@ -316,4 +307,4 @@ a.text-error:visited { color: #ff6003; }
 .text-large { font-size: 1.2em; }
 .text-ellipsis { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
 .text-clip { overflow: hidden; text-overflow: clip; white-space: nowrap; }
-.text-break { -webkit-hyphens: auto; -ms-hyphens: auto; hyphens: auto; word-break: break-word; word-wrap: break-word; } /* mB v4.14.10 on 2018-12-30T01:58:26.686Z */
+.text-break { -webkit-hyphens: auto; -ms-hyphens: auto; hyphens: auto; word-break: break-word; word-wrap: break-word; } /* mB v4.14.11 on 2018-12-30T20:34:06.430Z */
