--- a/meta-website/assets/css/spectreTop.css
+++ b/meta-website/assets/css/spectreTop.css
@@ -40,7 +40,7 @@ template { display: none; }
 [hidden] { display: none; }
 *, *::before, *::after { box-sizing: inherit; }
 html { box-sizing: border-box; font-size: 20px; line-height: 1.5; -webkit-tap-highlight-color: transparent; }
-body { background: #fff; color: #3b4351; font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif; font-size: 0.8rem; overflow-x: hidden; text-rendering: optimizeLegibility; }
+body { background: #fff; color: #3b4351; font-family: "Open Sans", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif; font-size: 0.8rem; overflow-x: hidden; text-rendering: optimizeLegibility; }
 a { color: #5755d9; outline: none; text-decoration: none; }
 a:focus { box-shadow: 0 0 0 0.1rem rgba(87, 85, 217, 0.2); }
 a:focus, a:hover, a:active, a.active { color: #302ecd; text-decoration: underline; }
@@ -57,7 +57,7 @@ a:visited { color: #807fe2; }
 .columns.col-gapless > .column { padding-left: 0; padding-right: 0; }
 .columns.col-oneline { flex-wrap: nowrap; overflow-x: auto; }
 .column { flex: 1; max-width: 100%; padding-left: 0.4rem; padding-right: 0.4rem; }
-.column.col-12, .column.col-11, .column.col-10, .column.col-9, .column.col-8, .column.col-7, .column.col-6, .column.col-5, .column.col-4, .column.col-3, .column.col-2, .column.col-1 { flex: none; }
+.column.col-12, .column.col-11, .column.col-10, .column.col-9, .column.col-8, .column.col-7, .column.col-6, .column.col-5, .column.col-4, .column.col-3, .column.col-2, .column.col-1, .column.col-auto { flex: none; }
 .col-12 { width: 100%; }
 .col-11 { width: 91.66666667%; }
 .col-10 { width: 83.33333333%; }
@@ -74,7 +74,7 @@ a:visited { color: #807fe2; }
 .col-mx-auto { margin-left: auto; margin-right: auto; }
 .col-ml-auto { margin-left: auto; }
 .col-mr-auto { margin-right: auto; }
-@media (max-width: 1280px) { .col-xl-12, .col-xl-11, .col-xl-10, .col-xl-9, .col-xl-8, .col-xl-7, .col-xl-6, .col-xl-5, .col-xl-4, .col-xl-3, .col-xl-2, .col-xl-1 { flex: none; }
+@media (max-width: 1280px) { .col-xl-12, .col-xl-11, .col-xl-10, .col-xl-9, .col-xl-8, .col-xl-7, .col-xl-6, .col-xl-5, .col-xl-4, .col-xl-3, .col-xl-2, .col-xl-1, .col-xl-auto { flex: none; }
   .col-xl-12 { width: 100%; }
   .col-xl-11 { width: 91.66666667%; }
   .col-xl-10 { width: 83.33333333%; }
@@ -87,9 +87,10 @@ a:visited { color: #807fe2; }
   .col-xl-3 { width: 25%; }
   .col-xl-2 { width: 16.66666667%; }
   .col-xl-1 { width: 8.33333333%; }
+  .col-xl-auto { width: auto; }
   .hide-xl { display: none !important; }
   .show-xl { display: block !important; } }
-@media (max-width: 960px) { .col-lg-12, .col-lg-11, .col-lg-10, .col-lg-9, .col-lg-8, .col-lg-7, .col-lg-6, .col-lg-5, .col-lg-4, .col-lg-3, .col-lg-2, .col-lg-1 { flex: none; }
+@media (max-width: 960px) { .col-lg-12, .col-lg-11, .col-lg-10, .col-lg-9, .col-lg-8, .col-lg-7, .col-lg-6, .col-lg-5, .col-lg-4, .col-lg-3, .col-lg-2, .col-lg-1, .col-lg-auto { flex: none; }
   .col-lg-12 { width: 100%; }
   .col-lg-11 { width: 91.66666667%; }
   .col-lg-10 { width: 83.33333333%; }
@@ -102,9 +103,10 @@ a:visited { color: #807fe2; }
   .col-lg-3 { width: 25%; }
   .col-lg-2 { width: 16.66666667%; }
   .col-lg-1 { width: 8.33333333%; }
+  .col-lg-auto { width: auto; }
   .hide-lg { display: none !important; }
   .show-lg { display: block !important; } }
-@media (max-width: 840px) { .col-md-12, .col-md-11, .col-md-10, .col-md-9, .col-md-8, .col-md-7, .col-md-6, .col-md-5, .col-md-4, .col-md-3, .col-md-2, .col-md-1 { flex: none; }
+@media (max-width: 840px) { .col-md-12, .col-md-11, .col-md-10, .col-md-9, .col-md-8, .col-md-7, .col-md-6, .col-md-5, .col-md-4, .col-md-3, .col-md-2, .col-md-1, .col-md-auto { flex: none; }
   .col-md-12 { width: 100%; }
   .col-md-11 { width: 91.66666667%; }
   .col-md-10 { width: 83.33333333%; }
@@ -117,9 +119,10 @@ a:visited { color: #807fe2; }
   .col-md-3 { width: 25%; }
   .col-md-2 { width: 16.66666667%; }
   .col-md-1 { width: 8.33333333%; }
+  .col-md-auto { width: auto; }
   .hide-md { display: none !important; }
   .show-md { display: block !important; } }
-@media (max-width: 600px) { .col-sm-12, .col-sm-11, .col-sm-10, .col-sm-9, .col-sm-8, .col-sm-7, .col-sm-6, .col-sm-5, .col-sm-4, .col-sm-3, .col-sm-2, .col-sm-1 { flex: none; }
+@media (max-width: 600px) { .col-sm-12, .col-sm-11, .col-sm-10, .col-sm-9, .col-sm-8, .col-sm-7, .col-sm-6, .col-sm-5, .col-sm-4, .col-sm-3, .col-sm-2, .col-sm-1, .col-sm-auto { flex: none; }
   .col-sm-12 { width: 100%; }
   .col-sm-11 { width: 91.66666667%; }
   .col-sm-10 { width: 83.33333333%; }
@@ -132,9 +135,10 @@ a:visited { color: #807fe2; }
   .col-sm-3 { width: 25%; }
   .col-sm-2 { width: 16.66666667%; }
   .col-sm-1 { width: 8.33333333%; }
+  .col-sm-auto { width: auto; }
   .hide-sm { display: none !important; }
   .show-sm { display: block !important; } }
-@media (max-width: 480px) { .col-xs-12, .col-xs-11, .col-xs-10, .col-xs-9, .col-xs-8, .col-xs-7, .col-xs-6, .col-xs-5, .col-xs-4, .col-xs-3, .col-xs-2, .col-xs-1 { flex: none; }
+@media (max-width: 480px) { .col-xs-12, .col-xs-11, .col-xs-10, .col-xs-9, .col-xs-8, .col-xs-7, .col-xs-6, .col-xs-5, .col-xs-4, .col-xs-3, .col-xs-2, .col-xs-1, .col-xs-auto { flex: none; }
   .col-xs-12 { width: 100%; }
   .col-xs-11 { width: 91.66666667%; }
   .col-xs-10 { width: 83.33333333%; }
@@ -147,5 +151,6 @@ a:visited { color: #807fe2; }
   .col-xs-3 { width: 25%; }
   .col-xs-2 { width: 16.66666667%; }
   .col-xs-1 { width: 8.33333333%; }
+  .col-xs-auto { width: auto; }
   .hide-xs { display: none !important; }
-  .show-xs { display: block !important; } } /* mB v4.14.10 on 2018-12-30T01:58:27.944Z */
+  .show-xs { display: block !important; } } /* mB v4.14.11 on 2018-12-30T20:34:07.705Z */
