--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -43,7 +43,8 @@ html(lang='en_US')
       script(src= '/assets/js/loader.js')
 
       //- top css layout
-      link(href='/assets/css/spectreTop.css', rel='stylesheet', type='text/css') 
+      link(href='/assets/3rd/spectreTop.css', rel='stylesheet', type='text/css') 
+      link(href='/assets/3rd/navJBar.css', rel='stylesheet', type='text/css') 
       style.
          .delayShowing { opacity: 0; }
       //- in case a page needs it:
