--- a/meta-website/layout/nav.pug
+++ b/meta-website/layout/nav.pug
@@ -1,5 +1,5 @@
 
-header.delayShowing
+header
    .logo-wrap
       a(href='/')#logo
          span Meta
@@ -28,11 +28,10 @@ header.delayShowing
                li
                   a(href='/about/about/') About Us
                li
-                  a(href='/about/vic-cekvenich/') Victor Cekvenich
+                  a(href='/about/support/') Support
                li
-                  a(href='/about/support/') support
-               li
-                  a(href='/about/contact/') contact us
+                  a(href='/about/contact/') Contact us
+
       .show-lg#navBarCont
          svg.featherSVG(viewBox='0 0 24 24')
             line(x1='3', y1='12', x2='21', y2='12')
