--- a/meta-website/ZDOC/index.pug
+++ b/meta-website/ZDOC/index.pug
@@ -1,5 +1,27 @@
 extends /layout/layout
 
 block main
+
+   style.
+      .pageBack {
+         background-attachment: scroll;
+         min-height: 45vh;
+         background-position: center center;
+         background-repeat: no-repeat;
+         background-size: cover;
+      }
+
+      .pageBack {
+         background-image: url(img.jpg);
+      }
+
+   .pageBack
+
+      br
+      .padL.white oh hi 1
+
+   br
+   .padL oh hi 2
+
    include:metaMD text.md      
-   .d-hide(data-js-menu-highlight="about")
+
