--- a/meta-website/ZDOC/index.pug
+++ b/meta-website/ZDOC/index.pug
@@ -16,20 +16,14 @@ block main
       }
 
    .pageBack
-
       br
-      .padL.white oh hi 1
+      .padL.white 
 
-   br
-   .padL
-      h1.title Yes
-   .padL oh hi 2
 
-   .pad 
+   //.pad 
       .title #{title}
-      p #{content_text}
+      .space #{content_text}
       img(src=image, height='160', width='160')
-
 
    .pad
       include:metaMD text.md
